Foi escluido o arquivo JacksonConfig.java! ate qui tudo funcionando, mais não foram feita consultas pelo front, apenas na web e Swagger!